# aircraft-health-cag-demo

./: .cursorignore  .cursorrules  .gitignore  README.md
dev/: .env.example  package-lock.json  package.json  pyproject.toml
dev/client/: index.html  tailwind.config.js  vite.config.ts
dev/client/src/: App.tsx  index.css
dev/client/src/components/: AgenticInsights.tsx  AircraftComponents.tsx  FleetPage.tsx  (+12 more)
dev/data/: flight_data_N1156P.csv  flight_data_N220WN.csv  flight_data_N235WN.csv  flight_data_N246WN.csv  flight_data_N287WN.csv  flight_data_N4798E.csv  flight_data_N8834Q.csv  maintenance_N220WN.csv  maintenance_N231WN.csv  maintenance_N235WN.csv  maintenance_N246WN.csv  maintenance_N251WN.csv  maintenance_N266WN.csv  maintenance_N277WN.csv  maintenance_N287WN.csv  maintenance_N291WN.csv  maintenance_N8834Q.csv
dev/data/documents/: ad_2015-08-12_737_exit_floor_track.txt  ad_2018-23-09_cfm56_fan_blade.txt  ad_2020-14-06_cfm56_hpt_blade.txt  ad_80-04-03-r2_cam_lifter.txt  poh_emergency.txt  poh_limitations.txt  poh_performance.txt  poh_systems.txt  sb_480f_oil_service.txt
dev/mock_cdf/: server.py
dev/mock_cdf/store/: assets.json  datapoints.json  events.json  files.json  fleet_owners.json  policies.json  relationships.json  store.py  timeseries.json
dev/scripts/: dataset.py  transform_flights_to_cag.py  transform_maintenance_to_cag.py
dev/src/: aircraft_times.py  api.py
dev/src/agent/: agent.py  context.py  tools.py
dev/src/ingest/: index.py  ingest_assets.py  ingest_documents.py  ingest_fleet_graph.py  ingest_flights.py  ingest_maintenance.py
(+130 files in other folders)
